--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				
 			</header> <!-- .site-header -->
 
-			<div class="hero hero-slider">
+			<div class="hero-slider">
 				<ul class="slides">
 					<li data-bg-image="image0/hero-slider-1.jpg">
 						
