--- a/about.html
+++ b/about.html
@@ -33,21 +33,12 @@
 				<div class="top-header">
 					<div class="container">
 						<a href="index.html" id="branding">
-							<img src="image0/logomain.png" alt="Company Name" class="logo">
+							<img src="image0/logomain.png" alt="Pharmaron" class="logo">
 							<div class="logo-text">
 								<!-- <h1 class="site-title">Company Name</h1> -->
 								 <small class="description">We Care For You</small> 
 							</div>
 						</a> <!-- #branding -->
-					
-						<!-- <div class="right-section pull-right">
-							<a href="#" class="phone"><img src="images/icon-phone.png" class="icon">+1 823 424 9134</a>
-					
-							<form action="#" class="search-form">
-								<input type="text" placeholder="Search...">
-								<button type="submit"><img src="images/icon-search.png" alt=""></button>
-							</form>
-						</div> -->
 					</div> <!-- .container -->
 				</div> <!-- .top-header -->
 
